# water-wave-implementation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
pre/: slides.tex
pre2/: slides.tex
presentation/: slides.tex
source/: gerstner-water.cpp
src/: Makefile  const.h  gerstner-water-vs.glsl  gerstner-water.cpp  packet.cpp  packet.h  util.cpp
